--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "polymer-settings",
+  "name": "polymer-settings-sample",
   "version": "0.0.0",
   "private": true,
   "ignore": [
@@ -10,14 +10,7 @@
     "tests"
   ],
   "dependencies": {
-    "core-drawer-panel": "Polymer/core-drawer-panel#^0.5.2",
-    "core-header-panel": "Polymer/core-header-panel#^0.5.2",
-    "core-menu": "Polymer/core-menu#^0.5.2",
-    "core-toolbar": "Polymer/core-toolbar#^0.5.2",
     "font-roboto": "Polymer/font-roboto#^0.5.2",
-    "paper-tabs": "Polymer/paper-tabs#^0.5.2",
-    "paper-toggle-button": "Polymer/paper-toggle-button#^0.5.2",
-    "polymer": "Polymer/polymer#~0.5.2",
     "core-elements": "Polymer/core-elements#~0.5.2",
     "paper-elements": "Polymer/paper-elements#~0.5.2"
   }
