--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "polymer-settings-sample",
-  "version": "0.0.0",
+  "name": "rpg-stats-2000",
+  "version": "0.1.0",
   "private": true,
   "ignore": [
     "**/.*",
