--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg-stats-2000",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "ignore": [
     "**/.*",
@@ -11,8 +11,8 @@
   ],
   "dependencies": {
     "chai": "chaijs/chai#^1.10.0",
-    "font-roboto": "Polymer/font-roboto#^0.5.2",
-    "core-elements": "Polymer/core-elements#~0.5.2",
-    "paper-elements": "Polymer/paper-elements#~0.5.2"
+    "font-roboto": "Polymer/font-roboto#~0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "paper-elements": "Polymer/paper-elements#~0.5.4"
   }
 }
