--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "chai": "chaijs/chai#^1.10.0",
     "font-roboto": "Polymer/font-roboto#~0.5.4",
     "core-elements": "Polymer/core-elements#~0.5.4",
-    "paper-elements": "Polymer/paper-elements#~0.5.4"
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
+    "observe-js": "Polymer/observe-js"
   }
 }
